syntax = "proto3";

option csharp_namespace = "GrpcDefinition";

service ContentServer{
	rpc GetContent(Request) returns(PhotoSetsDataResult){}
	rpc UploadImage(SendImage) returns(Response) {}
	rpc UploadImageStream(stream SendImage) returns(Response) {}
}

message PhotoSetsDataResult{
	PhotoSetsData PhotoSets = 1;
	string ActionName = 2;
}

message PhotoSetsData{
	repeated PhotoSetData PhotoSet = 1;
}

message PhotoSetData{
	string Id = 1;
	string Primary = 2;
	ContentData Title = 3;
	ContentData Description = 4;
	string Date_Create = 5;
	string Date_Update = 6;
}

message ContentData{
	string _Content = 1;
}

message Request{
}

message SendImage{
	bytes data = 1;
}

message Response{
    int32 length = 1;
}